# chaosTrace

./: .dockerignore  .gitignore  Makefile  README.md  api_logs_debug.txt  pyproject.toml
.github/workflows/: ci.yml
chaos_scripts/: db_lock_v1.yaml  latency_spike.yaml  network_chaos.yaml  resource_exhaustion.yaml  schema_mutation.yaml
chaostrace/: __init__.py  cli.py
chaostrace/control_plane/: __init__.py  config.py  dashboard.py  main.py
chaostrace/control_plane/api/: __init__.py  events.py  reports.py  runs.py
chaostrace/control_plane/dashboard/: __init__.py
chaostrace/control_plane/dashboard/scripts/: app.js
chaostrace/control_plane/dashboard/styles/: main.css
chaostrace/control_plane/dashboard/templates/: index.html
chaostrace/control_plane/models/: __init__.py  chaos.py  events.py  policy.py  run.py
chaostrace/control_plane/services/: __init__.py  chaos_scheduler.py  event_store.py  orchestrator.py  policy_engine.py  report_generator.py
chaostrace/db_proxy/: __init__.py  chaos_hooks.py  proxy_server.py  risk_scorer.py  sql_interceptor.py
chaostrace/fs_proxy/: __init__.py  interceptor.py  models.py  policy_engine.py
examples/: cleanup_agent.py
policies/: permissive.yaml  strict.yaml  strict_fs.yaml
sandbox/: Dockerfile.api  Dockerfile.proxy  docker-compose.yaml
scenarios/: bulk_operations.yaml  data_cleanup.yaml  data_migration.yaml  error_recovery.yaml  pii_exfiltration.yaml  privilege_escalation.yaml  rogue_admin.yaml  scenario_template.yaml
tests/: __init__.py
tests/unit/: __init__.py  test_fs_interceptor.py  test_policy_engine.py  test_sql_interceptor.py
